--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <!-- <img id= "logo" src = "Canvasstudiologo.png" alt = "CanvasStudioLogo"> -->
         <ul>
           <li class = "menu"><a href = "#">Home</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/About.html">About</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/Exhibitions.html">Exhibitions</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/VolunteerWorks.html">Volunteer Work</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/Shop.html">Shop</a></li>
+          <li class = "menu"><a href = "About.html">About</a></li>
+          <li class = "menu"><a href = "Exhibitions.html">Exhibitions</a></li>
+          <li class = "menu"><a href = "VolunteerWorks.html">Volunteer Work</a></li>
+          <li class = "menu"><a href = "Shop.html">Shop</a></li>
         </ul>
         <img src = "homeimage.png" alt = "homeimage">
       </div>
