--- a/VolunteerWorks.html
+++ b/VolunteerWorks.html
@@ -10,11 +10,11 @@
       <div class = "section">
         <a href = "file:///Users/nayoungha/Desktop/canvaswebsite/index.html"><img id= "logo" src = "Canvasstudiologo.png" alt = "CanvasStudioLogo"></a>
         <ul>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/index.html">Home</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/About.html">About</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/Exhibitions.html">Exhibitions</a></li>
+          <li class = "menu"><a href = "index.html">Home</a></li>
+          <li class = "menu"><a href = "About.html">About</a></li>
+          <li class = "menu"><a href = "Exhibitions.html">Exhibitions</a></li>
           <li class = "menu"><a href = "#">Volunteer Work</a></li>
-          <li class = "menu"><a href = "file:///Users/nayoungha/Desktop/canvaswebsite/Shop.html">Shop</a></li>
+          <li class = "menu"><a href = "Shop.html">Shop</a></li>
         </ul>
       </div>
       <div class = "section">
