--- a/VolunteerWorks.html
+++ b/VolunteerWorks.html
@@ -8,7 +8,7 @@
   <body>
     <div class = "container">
       <div class = "section">
-        <a href = "file:///Users/nayoungha/Desktop/canvaswebsite/index.html"><img id= "logo" src = "Canvasstudiologo.png" alt = "CanvasStudioLogo"></a>
+        <a href = "index.html"><img id= "logo" src = "Canvasstudiologo.png" alt = "CanvasStudioLogo"></a>
         <ul>
           <li class = "menu"><a href = "index.html">Home</a></li>
           <li class = "menu"><a href = "About.html">About</a></li>
