--- a/VolunteerWorks.html
+++ b/VolunteerWorks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shop</title>
+    <title>Volunteer Work</title>
     <link rel = "stylesheet" type="text/css" href ="VolunteerWorks.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap" rel="stylesheet">
   </head>
