--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
           <li class = "menu"><a href = "#">Shop</a></li>
         </ul>
       </div>
-      <a href = "file:///Users/nayoungha/Desktop/canvaswebsite/badge.html"><img src = "badge3.jpeg" alt = "badge3"></a>
+      <a href = "badge.html"><img src = "badge3.jpeg" alt = "badge3"></a>
       <img src = "cactus1.jpeg" alt = "cactus1">
       <img src = "smallflower1.jpeg" alt = "smallflower">
       <img src = "smallcac1.jpeg" alt = "smallcac">
