--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li class = "menu"><a href = "About.html">About</a></li>
           <li class = "menu"><a href = "Exhibitions.html">Exhibitions</a></li>
           <li class = "menu"><a href = "VolunteerWorks.html">Volunteer Work</a></li>
-          <li class = "menu"><a href = "shop.html">Shop</a></li>
+          <li class = "menu"><a href = "Shop.html">Shop</a></li>
         </ul>
         <img src = "homeimage.png" alt = "homeimage">
       </div>
