--- a/VolunteerWorks.html
+++ b/VolunteerWorks.html
@@ -16,6 +16,8 @@
           <li class = "menu"><a href = "#">Volunteer Work</a></li>
           <li class = "menu"><a href = "Shop.html">Shop</a></li>
         </ul>
+        <br>
+        <p id = instruct>Scroll down...</p>
       </div>
       <div class = "section">
         <h1>OUR GOAL...</h1>
