--- a/eyesticker.html
+++ b/eyesticker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Badge</title>
+    <title>Eye Sticker</title>
     <link rel = "stylesheet" type = "text/css" href = "product.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap" rel="stylesheet">
   </head>
@@ -14,13 +14,13 @@
       <li class = "menu"><a href = "VolunteerWorks.html">Volunteer Work</a></li>
       <li class = "menu"><a href = "Shop.html">Shop</a></li>
     </ul>
-    <img src = "badge3.jpeg" alt = "badge3">
+    <img src = "eyesticker.jpeg" alt = "eyesticker">
     <br>
     <section class = "texts">
-      <h1>School Exhibition Logo Badge</h1>
-      <h2>Price: ₩3,000</h2>
-      <p>This badge was created for the <em>School</em> exhibition held in 2019.</p>
-      <p>Material: plastic and steel</p>
+      <h1>School Exhibition Logo Sticker</h1>
+      <h2>Price: ₩2,000</h2>
+      <p>This sticker was created for the <em>School</em> exhibition held in 2019.</p>
+      <p>Material: PVC</p>
       <p>Shipping: FREE shipping for over ₩ 10,000</p>
       <p>₩ 2,500 shipping fee for under ₩ 10,000</p>
       <section class = "quantity">
@@ -47,10 +47,7 @@
     </section>
     <br>
     <section class = "images">
-      <img id = "image1" src = "badge1.jpeg" alt = "badge1">
-      <img id = "image2" src = "badge2.jpeg" alt = "badge2">
-      <img id = "image3" src = "badge4.jpeg" alt = "badge4">
-      <img id = "image4" src = "badge5.jpeg" alt = "badge5">
+
     </section>
   </body>
 </html>
