--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap" rel="stylesheet">
   </head>
   <body>
+    <audio controls loop autoplay>
+      <source src="canvasstudiomusic.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <div class = "container">
       <div class = "section">
         <h1>Welcome to<br> Canvas Studio</h1>
