Update 2018 Exhibition Gallery.html

--- a/2018 Exhibition Gallery.html
+++ b/2018 Exhibition Gallery.html
@@ -29,7 +29,7 @@
         <img src = "82.jpg" alt = "pic82">
         <img src = "83.jpg" alt = "pic83">
         <img src = "84.jpg" alt = "pic84">
-        <img src = "85.jpg" alt = "pic85">
+        <img class="rotate" src = "85.jpg" alt = "pic85">
         <img src = "86.jpg" alt = "pic86">
         <img src = "87.jpg" alt = "pic87">
         <img src = "88.jpg" alt = "pic88">
