--- a/Exhibitions.html
+++ b/Exhibitions.html
@@ -30,8 +30,8 @@
         <img id="2019exhibition" src = "2019exhibition.jpg" alt = "2019exhibition">
       </section>
       <section class = "gallery">
-        <a href = "2018 Exhibition Gallery.html">2018 Exhibition Gallery</a>
-        <a href = "2019 Exhibition Gallery.html">2019 Exhibition Gallery</a>
+        <a href = "2018 Exhibition Gallery.html"><h2 class="left">2018 Exhibition Gallery</h2></a>
+        <a href = "2019 Exhibition Gallery.html"><h2 class="right">2019 Exhibition Gallery</h2></a>
       </section>
     <br>
     <br>
