--- a/Exhibitions.html
+++ b/Exhibitions.html
@@ -27,7 +27,7 @@
       </h1>
       <section class = "images">
         <img id="2018exhibition" src = "2018exhibition.jpg" alt = "2018exhibition">
-        <img id="2019exhibition" src = "2019exhibition.jpg" alt = "2019exhibition">
+        <img id="2019exhibition" src = "2019exhibition.jpeg" alt = "2019exhibition">
       </section>
       <section class = "gallery">
         <a href = "2018 Exhibition Gallery.html"><h2 class="left">2018 Exhibition Gallery</h2></a>
