--- a/2018 Exhibition Gallery.html
+++ b/2018 Exhibition Gallery.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap" rel="stylesheet">
   </head>
   <body>
+    <audio controls loop autoplay>
+      <source src="canvasstudiomusic.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <div class = "container">
       <div class = "section">
         <a href = "index.html"><img id= "logo" src = "Canvasstudiologo.png" alt = "CanvasStudioLogo"></a>
