--- a/Shop.html
+++ b/Shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>dfsdsfdso</title>
+    <title>Shop | Canvas Studio</title>
     <link rel = "stylesheet" type="text/css" href ="shop.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap" rel="stylesheet">
   </head>
