Update 2019 Exhibition Gallery.html

--- a/2019 Exhibition Gallery.html
+++ b/2019 Exhibition Gallery.html
@@ -29,7 +29,7 @@
     <br>
     <br>
       <section class="gallery">
-        <h1>Talking a Look at Education from a New Light</h1>
+        <h1>Taking a Look at Education from a New Light</h1>
         <p>
             Schools are where most people have spent their childhoods in, where they were sometimes oppressed but also given joy through learning. Through this exhibition, the members of Canvas
           Studio have demonstrated their different views of school and education as honestly as possible. After much contemplation, we decided to hold an exhibition with the theme “School” in light
