--- a/Exhibitions.html
+++ b/Exhibitions.html
@@ -23,7 +23,7 @@
     <br>
     <br>
       <h1 class = "title">
-        View the Exhibitions
+        View the Past Exhibitions
       </h1>
       <section class = "images">
         <img id="2018exhibition" src = "2018exhibition.jpg" alt = "2018exhibition">
@@ -35,10 +35,15 @@
       </section>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    
+    <h2>Get Tickets for 2019 School Exhibition!</h2>
+    <ul>
+      <li class = "link"><a href = "https://www.culture.go.kr/perform/performView.do?uci=G7061559715003558">Korean Culture Portal</a></li>
+      <li class = "link"><a href = "https://www.jungle.co.kr/exhibit/20410">Design Jungle</a></li>
+      <li class = "link"><a href = "https://onoffmix.com/event/182218">On Off Mix</a></li>
+      <br>
+      <li class = "link"><a href = "https://www.facebook.com/events/2334600943463321/">Facebook</a></li>
+      <li class = "link"><a href = "http://www.urbanpluto.com/exhibition/2226-%ec%83%88%eb%a1%9c%ec%9a%b4-%ea%b4%80%ec%a0%90%ec%9c%bc%eb%a1%9c-%ed%95%99%ea%b5%90%eb%a5%bc-%eb%b3%b4%eb%8b%a4l">Urban Pluto</a></li>
+    </ul>
+
   </body>
 </html>
