--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Canvas Studio</title>
-    <link rel = "icon" href = "canvas.png">
+    <link rel = "icon" href = "canvas.png" type="image/icon type">
     <link rel = "stylesheet" type="text/css" href ="home.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Poiret+One|Quicksand&display=swap" rel="stylesheet">
   </head>
