--- a/2018 Members.html
+++ b/2018 Members.html
@@ -27,12 +27,46 @@
         <p class="img_description">
           <i>(From left to right, Nayoung Ha, Jane Lee, Jiyeon Stephanie Lee, Se Eun Kim, Jaeri Kim)</i>
         </p>
-        <p><strong>Participants of 2018 Nature Exhibition:</strong><br>
-          Jiyeon Stephanie Lee, Jaeri Kim, Hein Kim (not present in picture), Nayoung Ha, Jane Lee, Se Eun Kim
-          <br><br><strong>Jiyeon Stephanie Lee (Founder)</strong><br>- Captain of 2018 Bugil Canvas<br><br>
-          <strong>Jaeri Kim (Co-Founder)</strong><br>- Vice Captain of 2018 Bugil Canvas
-        </p>
-      </section>
+        <p><strong>Participants of 2018 Nature Exhibition:</strong></p>
+        <br>
+        <table style="width:100%">
+         <tr>
+          <th>Firstname</th>
+          <th>Lastname</th> 
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>Jiyeon Stephanie</td>
+          <td>Lee</td>
+          <td>18</td>
+        </tr>
+        <tr>
+          <td>Jaeri</td>
+          <td>Kim</td>
+          <td>18</td>
+        </tr>
+        <tr>
+          <td>Hein</td>
+          <td>Kim</td>
+          <td>18</td>
+        </tr>
+        <tr>
+          <td>Nayoung</td>
+          <td>Ha</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>Jane</td>
+          <td>Lee</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>Se Eun</td>
+          <td>Kim</td>
+          <td>17</td>
+        </tr>
+      </table>
+     </section>
     <br>
     <br>
     <br>
