--- a/2019 Members.html
+++ b/2019 Members.html
@@ -24,8 +24,47 @@
     <br>
       <section class="introducing">
         <img id="2019members" src = "2019members.jpg" alt = "2019members">
-        <p><strong>Participants of 2019 School Exhibition:</strong><br>Nayoung Ha, Jane Lee, Judy Lee, Wonjung May Lee, Donghyun Nick Shin, Juno Park
-          <br><br><strong>Nayoung Ha</strong><br>- Co-Captain of Bugil Canvas<br>- Founder of the website Canvas Studio<br><br><strong>Jane Lee</strong>
+        <p><strong>Participants of 2019 School Exhibition:</strong><br></p>
+        <table style="width:100%">
+          <tr>
+            <th>Firstname</th>
+            <th>Lastname</th> 
+            <th>Age</th>
+          </tr>
+          <tr>
+            <td>Nayoung</td>
+            <td>Ha</td>
+            <td>18</td>
+          </tr>
+          <tr>
+            <td>Jane</td>
+            <td>Lee</td>
+            <td>18</td>
+          </tr>
+          <tr>
+            <td>Judy</td>
+            <td>Lee</td>
+            <td>18</td>
+          </tr>
+          <tr>
+            <td>Wonjung May</td>
+            <td>Lee</td>
+            <td>18</td>
+          </tr>
+          <tr>
+            <td>Donghyun Nick</td>
+            <td>Shin</td>
+            <td>18</td>
+          </tr>
+          <tr>
+            <td>Juno</td>
+            <td>Park</td>
+            <td>18</td>
+          </tr>
+        </table>
+        <br>
+        <br>
+        <p><strong>Nayoung Ha</strong><br>- Co-Captain of Bugil Canvas<br>- Founder of the website Canvas Studio<br><br><strong>Jane Lee</strong>
           <br>- Co-Captain of Bugil Canvas<br>- Founder of the website Canvas Studio
         </p>
       </section>
