--- a/2019 Members.html
+++ b/2019 Members.html
@@ -65,7 +65,7 @@
         <br>
         <br>
         <p><strong>Nayoung Ha</strong><br>- Co-Captain of Bugil Canvas<br>- Founder of the website Canvas Studio<br><br><strong>Jane Lee</strong>
-          <br>- Co-Captain of Bugil Canvas<br>- Founder of the website Canvas Studio
+          <br>- Co-Captain of Bugil Canvas
         </p>
       </section>
     <br>
